--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://girishhh.github.io/react-sidebars/",
   "name": "sidebar-layouts",
   "version": "0.1.0",
   "private": true,
